# SC-Analysis

./: .env  .gitignore  Cargo.toml  README.md  diesel.toml
benches/: benchmark.rs
migrations/2024-07-11-233844_create_trace_tables/: down.sql  up.sql
src/: loaders.rs  main.rs  math.rs  schema.rs  title_bar.rs  trace_plotter.rs  wave.rs
src/trace_plotter/: mod.rs  plot_selection.rs  trace_plot.rs  trace_plotter.rs  util.rs
