[package]
name = "softcore_sc_analysis"
version = "0.1.0"
edition = "2021"

[dependencies]
egui = "0.28.0"
egui_plot = "0.28.0"
eframe = "0.28.0"
splines = "4.3.1"
plotters = "0.3.6"
csv = "1.3.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "2.0.0-rc.3"
zstd = "0.13.2"
rayon = "1.10.0"
num_cpus = "1.16.0"
log = "0.4.22"
rfd = "0.14.1"
rand = "0.9.0-alpha.1"
simple_logger = "5.0.0"
arrayfire = "3.8.0"
indicatif = { version = "0.17.8", features = ["rayon"] }

[profile.dev.package."*"]
opt-level = 3

[dev-dependencies]
criterion = "0.5.1"
csv = "1.1"
bincode = "2.0.0-rc.3"
serde = { version = "1.0", features = ["derive"] }


[[bench]]
name = "example"
path = "benches/benchmark.rs"
harness = false
